--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 						<p class="text2">Довгий час фламенко вважався «закритим мистецтвом», оскільки цигани жили ізольованою групою; фламенко формувалося у вузьких колах. Але наприкінці XVIII століття гоніння циган припинили, і фламенко вийшло на підмостки таверн і кафе кантанте, знайшло свободу.</p>
 						<p class="text2">Наприкінці XX століття фламенко починає вбирати в себе кубинські мелодії і джазові мотиви, і, крім того, елементи класичного балету дістали там своє постійне місце. Найбільш відомий танцюрист фламенко Хоакін Кортес, який поновив поняття танцю фламенко, позбавив його від «канонічного стандарту» і вніс до нього новий живий струмінь і виразність.</p>
 						<p class="text2">Імпровізаційний характер фламенко, складний ритм і специфічна техніка виконання нерідко перешкоджають точному нотному запису мелодій фламенко. Тому мистецтво як гітариста, так і танцюриста, і співака зазвичай передається від майстра до учня.</p>
-						<img src="img/2.jpg" alt="Дівчина з кастаньєтами"class="image">
+						<img src="img/2.jpg" alt="Дівчина з кастаньєтами" class="image">
 					</div>
 					<div class="display_none">Я тут щось написала, але цього ніхто не побачить, бо display - none.
 					</div>
 					<div class="characteristiс">
 						<h3 class="item">2. Характеристика жанру</h3>
-						<p class="text2">Фламенко втілює складну культурну традицію, яка виникла завдяки унікальній взаємодії відвічної арабської, андалузької, сефардської та циганської культур, котрі існували в Андалузії до й після Реконкісти. Латиноамериканські та кубинські впливи також відіграли важливу роль у формуванні музичних форм фламенко.</p>
+						<p class="text2 overflow_auto">Фламенко втілює складну культурну традицію, яка виникла завдяки унікальній взаємодії відвічної арабської, андалузької, сефардської та циганської культур, котрі існували в Андалузії до й після Реконкісти. Латиноамериканські та кубинські впливи також відіграли важливу роль у формуванні музичних форм фламенко.</p>
 						<p class="text2">Попри те, що фламенко вважають частиною культури Іспанії загалом, фактично воно походить з одного регіону — Андалузія. Проте й інші області, переважно Естремадура та Мурсія сприяли розвитку жанрів фламенко. Як тільки фламенко зародилося в Андалузії, це явище одразу стало окремою субкультурою, що спочатку зосередилась на території, відомій як Нижня Андалузія: Севілья, Кадіс і частина Малаги, але незабаром розповсюдилось по всій Андалузії, поєднуючи і перетворюючи фольклорні музичні форми. Оскільки популярність фламенко згодом досягла інших регіонів, різні місцеві іспанські музичні традиції (наприклад, традиційна кастильська музика) водночас і впливали, і перебували під впливом стилів фламенко.</p>
 						<img src="img/3.jpg" alt="Дівчина та хлопець в моменті танцю" class="image">
 					</div>
@@ -76,7 +76,7 @@
 							<li>3. Цигани були ключовим народом в підтримці цієї художньої форми, але вони були безграмотними та мали усну культуру. Їх народні пісні передавалися новим поколінням із уст в уста через повторні виступи в межах своєї соціальної групи.</li>
 							<li>4. Відсутність інтересу істориків і музикознавців. Фламенкологи зазвичай не мали спеціальної академічної освіти в галузях історії або музикознавства. Вони покладалися на обмежений ряд джерел (переважно записи 19-го сторіччя фольклориста Демофіло та записи іноземних мандрівників). Ситуація почала змінюватися в 1980-х, коли фламенко поволі почали вводити як дисципліну у консерваторіях.</li>
 						</ul>
-						<img src="img/4.jpg" alt="Фламенко"class="image image3">
+						<img src="img/4.jpg" alt="Фламенко" class="image image3">
 						<p class="link_text text2">Нище буде посилання, де ти можешь подивитись відео з танцем Фламенко</p>
 						<div class="linkvideo">
 							<a href="https://www.youtube.com/watch?v=ka0-ilwFuqk" class="link2">Тицяй тут щоб подивитись)
