--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					</div>
 					<div class="characteristiс">
 						<h3 class="item">2. Характеристика жанру</h3>
-						<p class="text2 overflow_auto">Фламенко втілює складну культурну традицію, яка виникла завдяки унікальній взаємодії відвічної арабської, андалузької, сефардської та циганської культур, котрі існували в Андалузії до й після Реконкісти. Латиноамериканські та кубинські впливи також відіграли важливу роль у формуванні музичних форм фламенко.</p>
+						<p class="text2">Фламенко втілює складну культурну традицію, яка виникла завдяки унікальній взаємодії відвічної арабської, андалузької, сефардської та циганської культур, котрі існували в Андалузії до й після Реконкісти. Латиноамериканські та кубинські впливи також відіграли важливу роль у формуванні музичних форм фламенко.</p>
 						<p class="text2">Попри те, що фламенко вважають частиною культури Іспанії загалом, фактично воно походить з одного регіону — Андалузія. Проте й інші області, переважно Естремадура та Мурсія сприяли розвитку жанрів фламенко. Як тільки фламенко зародилося в Андалузії, це явище одразу стало окремою субкультурою, що спочатку зосередилась на території, відомій як Нижня Андалузія: Севілья, Кадіс і частина Малаги, але незабаром розповсюдилось по всій Андалузії, поєднуючи і перетворюючи фольклорні музичні форми. Оскільки популярність фламенко згодом досягла інших регіонів, різні місцеві іспанські музичні традиції (наприклад, традиційна кастильська музика) водночас і впливали, і перебували під впливом стилів фламенко.</p>
 						<img src="img/3.jpg" alt="Дівчина та хлопець в моменті танцю" class="image">
 					</div>
